--- a/app/src/main/res/layout/item_atm.xml
+++ b/app/src/main/res/layout/item_atm.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
+    app:cardCornerRadius="0dp"
     android:orientation="vertical"
     app:cardElevation="2dp"
+    app:cardBackgroundColor="?attr/colorCardBg"
     app:cardUseCompatPadding="false">
 
     <LinearLayout
