--- a/app/src/main/res/layout/item_schedule_horizontal.xml
+++ b/app/src/main/res/layout/item_schedule_horizontal.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:gravity="center"
     android:text="6"
-    android:textColor="?attr/textPrimary" />
+    android:gravity="center"
+    android:textColor="?attr/textPrimary"
+    android:layout_height="match_parent"
+    android:layout_weight="1">
 
+</android.support.v7.widget.AppCompatTextView>
