--- a/app/src/main/res/layout/item_schedule_vertical.xml
+++ b/app/src/main/res/layout/item_schedule_vertical.xml
@@ -7,14 +7,14 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="6"
         android:textColor="?attr/textPrimary"
         android:textSize="50px" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="6"
