--- a/app/src/main/res/layout/list_card_item.xml
+++ b/app/src/main/res/layout/list_card_item.xml
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:padding="44px"
             android:textSize="50px"
+            android:textColor="?attr/textPrimary"
             android:text="Every corner must (initially) be provided a corner radius greater than 1, or else no corners are rounded. If you want specific corners to not be rounded, a work-around is to use android:radius to set a default corner radius greater than 1, but then override each and every corner with the values you really want, providing zero (0dp) where you don't want rounded corners."
             />
     </LinearLayout>
