--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -3,8 +3,8 @@
     xmlns:zero="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="?attr/colorPrimaryBg"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <include layout="@layout/tool_bar" />
@@ -13,8 +13,8 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center"
+         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         zero:placeholderImage="@mipmap/icon" />
 
     <android.support.v7.widget.AppCompatTextView
@@ -22,14 +22,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="?attr/textPrimary"
         android:text="@string/version"
-        android:textSize="50px"/>
+        android:textSize="50px" />
 
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,8 +42,8 @@
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/app_name"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="50px" />
@@ -57,8 +57,8 @@
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/author"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="50px" />
@@ -73,28 +73,28 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    zero:roundAsCircle="true"
-                    zero:placeholderImage="@mipmap/zero_head"/>
+                    zero:placeholderImage="@mipmap/zero_head"
+                    zero:roundAsCircle="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:layout_marginLeft="20dp"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <android.support.v7.widget.AppCompatTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="?attr/textPrimary"
                         android:text="@string/zero"
+                        android:textColor="?attr/textPrimary"
                         android:textSize="50px" />
 
                     <android.support.v7.widget.AppCompatTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="?attr/textSecond"
                         android:text="email：zeroztguo@163.com"
+                        android:textColor="?attr/textSecond"
                         android:textSize="45px" />
                 </LinearLayout>
             </LinearLayout>
@@ -103,8 +103,8 @@
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/copyright"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="50px" />
