--- a/app/src/main/res/layout/item_express.xml
+++ b/app/src/main/res/layout/item_express.xml
@@ -6,7 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp"
+    app:cardCornerRadius="0dp"
     android:elevation="2dp"
+    app:cardBackgroundColor="?attr/colorCardBg"
     app:cardUseCompatPadding="false">
 
     <LinearLayout
@@ -36,7 +38,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="中心花坛"
 
                     android:textColor="?attr/textPrimary"
                     android:textSize="50px" />
@@ -58,7 +59,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="中心花坛"
                     android:textColor="?attr/textPrimary"
 
                     android:textSize="50px" />
@@ -80,7 +80,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="中心花坛"
                     android:textColor="?attr/textPrimary"
                     android:textSize="50px" />
             </LinearLayout>
@@ -101,8 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:inputType="phone"
-                    android:text="中心花坛"
+                    android:autoLink="phone"
                     android:textColor="?attr/textPrimary"
                     android:textSize="50px" />
             </LinearLayout>
