--- a/app/src/main/res/layout/item_more.xml
+++ b/app/src/main/res/layout/item_more.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingTop="18dp"
-    android:paddingBottom="18dp">
+    android:paddingTop="50px"
+    android:paddingBottom="50px">
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/id_more_small_icon_iv"
@@ -17,6 +17,7 @@
         android:id="@+id/id_more_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="?attr/textSecond"
         android:layout_marginLeft="10dp"
         android:textSize="44px" />
 
