--- a/app/src/main/res/layout/item_news_content_image.xml
+++ b/app/src/main/res/layout/item_news_content_image.xml
@@ -9,5 +9,5 @@
     android:layout_marginTop="6dp"
     android:layout_marginBottom="6dp"
     fresco:progressBarAutoRotateInterval="3000"
-    fresco:progressBarImage="@mipmap/progress_bar"
+    fresco:progressBarImage="@mipmap/logo_blue_trans"
     fresco:viewAspectRatio="1.33" />
