--- a/app/src/main/res/layout/item_news_content_text.xml
+++ b/app/src/main/res/layout/item_news_content_text.xml
@@ -7,6 +7,7 @@
     android:layout_marginLeft="12dp"
     android:layout_marginRight="12dp"
     android:layout_marginTop="6dp"
+    android:autoLink="web|email"
     android:layout_marginBottom="6dp"
     android:textColor="?attr/textPrimary"
     android:textSize="54px" />
