--- a/app/src/main/res/layout/item_notify.xml
+++ b/app/src/main/res/layout/item_notify.xml
@@ -6,6 +6,7 @@
     android:layout_marginTop="5dp"
     app:cardCornerRadius="0dp"
     app:cardElevation="1dp"
+    app:cardBackgroundColor="?attr/colorCardBg"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="false">
 
