--- a/app/src/main/res/layout/item_schedule_head.xml
+++ b/app/src/main/res/layout/item_schedule_head.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="130px"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:text="6"
-    android:textColor="?attr/textPrimary" />
+    android:textColor="?attr/textPrimary"/>
 
 
